--- a/src/content/graphos/delivery/schema-proposals/configuration.mdx
+++ b/src/content/graphos/delivery/schema-proposals/configuration.mdx
@@ -13,7 +13,7 @@ description: Fine-tune the GraphQL schema proposal workflow by configuring permi
 | [Permissions](#configure-permissions-and-approvals)                     | Which roles can create and edit proposals                                             |
 | [Default reviewers](#default-reviewers)               | Which team members are default reviewers and whether default reviewer approval is required |
 | [Required approvals](#required-approvals)                       | The minimum number of approvals needed for a proposal to achieve [**Approved** status](./#proposal-statuses) |
-| [Description template](#configure-description-template)                   | An editable description that prepopulates for every new proposal created for the graph.|
+| [Description template](#configure-description-template)                   | An editable description that prepopulates every new proposal created for the graph |
 | [Schema checks](#configure-schema-checks)                   | Whether and how [schema checks](../schema-checks) incorporate proposals                                    |
 | [Notifications](#notifications)                  | Whether to send email notifications for proposal activity                              |
 
