Remove bold on "API Schema"

--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -261,7 +261,7 @@ Include results that take a GraphQL argument with any of the specified names. If
 
 ### Schema definition language
 
-The **SDL** tab displays the raw schema definition language (SDL) for each schema associated with your graph. For a monograph, this is simply the graph's **API Schema**. Supergraphs also include a supergraph schema and subgraph schemas. See [Viewing subgraph SDL](./federated-graphs#viewing-subgraph-sdl) for more information.
+The **SDL** tab displays the raw schema definition language (SDL) for each schema associated with your graph. For a monograph, this is simply the graph's API Schema. Supergraphs also include a supergraph schema and subgraph schemas. See [Viewing subgraph SDL](./federated-graphs#viewing-subgraph-sdl) for more information.
 
 Regardless of the SDL type you're viewing, you can **Copy** the SDL or download it in **Raw** or **JSON** format from this tab.
 
