--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -2,7 +2,7 @@
 title: Documentation
 toc: true
 subtitle: ' '
-description: Learn how Apollo GraphQL can help enterprise architects, API implementers, and client developers build, deploy, and manage a supergraph of unified microservices, data sources, and applications.
+description: Learn how Apollo GraphQL can help build, deploy, and manage a supergraph of unified microservices, data sources, and applications.
 ---
 
 import {
