--- a/src/content/graphos/delivery/check-configurations.mdx
+++ b/src/content/graphos/delivery/check-configurations.mdx
@@ -16,7 +16,7 @@ In [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content), you
 
 <img
   className="screenshot"
-  src="../img/check-configurations/check-configuration-page.png"
+  src="../img/check-configuration-page.png"
   alt="Check configuration page in GraphOS Studio"
 />
 
@@ -26,12 +26,6 @@ In [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content), you
 - **Operation count threshold**: Exclude all operations that were executed fewer than this number of times within the specified **time range**.
 - **Variants**: Include all distinct operations that were executed against each selected variant of your graph. The default value is "Base variant" (that is, whichever variant schema checks are being run against).
 - **Client exclusions**: Exclude all operations that were executed by particular clients, such as clients used exclusively for development and testing.
-
-  <img
-    class="screenshot"
-    src="../img/check-configurations/excluded-clients.png"
-    alt="Excluded clients configuration in GraphOS Studio"
-  />
 
 ## Using the Rover CLI
 
@@ -110,5 +104,6 @@ To check your schema against multiple variants, call `rover subgraph check` once
 <img
   className="screenshot"
   src="../img/schema-checks/multi-github-check.png"
-  alt="Multiple service checks"
+  alt="Multiple service checks running for different variants"
+  width="500"
 />
