--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -1,27 +1,38 @@
 ---
-title: Managing graphs in GraphOS Studio
+title: Graph exploration
+subtitle: Explore and visualize your graph's types, fields, and relationships
+description: Enhance GraphQL schema comprehension and design with Apollo GraphOS Studio, including schema visualization, the Explorer, and schema changelog. 
 ---
 
-This article describes GraphOS Studio features for all [graph types](./#graph-types). For features specific to supergraphs, see also [Supergraph-specific Studio features](./federated-graphs/).
+As your graph grows, understanding its structure can become more difficult.
+Without understanding a schema's intricacies—particularly how subgraphs relate to one another—development can become blocked or take wrong turns.
 
-## Creating graphs
+## GraphOS Studio features
 
-- To create a cloud supergraph, see the [GraphOS quickstart](../quickstart/cloud/).
-- To create a non-cloud graph (that is, a self-hosted supergraph or a monograph), see [this section](./#creating-graphs).
+GraphOS Studio provides several ways of understanding and exploring your organization's graphs, including:
 
-## Viewing graph details
+- An editable **README** page that describes the graph to newcomers
+- The **Schema** page, which includes three distinct views, including schema visualization
+- The **Explorer**, which helps you build new operations against your graph
+- The **Changelog**, which displays all published changes
 
-After selecting an organization in GraphOS Studio, click a particular graph variant to view its README, schema, data, and settings. All of a Studio organization's members can access the data and settings for every graph that belongs to that organization.
+<Note>
 
-<Tip>
+These GraphOS Studio features are available for all [graph types](./#graph-types). For features specific to supergraphs, see [Supergraph-specific Studio features](./federated-graphs). See [Variant pages](../quickstart/self-hosted/#variant-pages-in-studio) for the full list of Studio pages.
 
-Enterprise accounts can set [member roles](../org/members/#organization-wide-member-roles) to configure fine-grained access for individual members of their organization.
+</Note>
 
-</Tip>
+## Viewing graph pages
 
-### The README page
+After selecting an organization in GraphOS Studio, click a particular graph variant to view its pages.
 
-When a user opens one of your graph's variants in GraphOS Studio, its **README** page is shown:
+### Page permissions
+
+With Serverless and Dedicated plans, all Studio organization members have access to all pages, including **Settings** for all graphs within the organization. Enterprise accounts can set [member roles](../org/members/#organization-wide-member-roles) to configure fine-grained access for individual members of their organization.
+
+## The README page
+
+When a user opens one of your graph's variants in GraphOS Studio, its **README** page appears:
 
 <img className="screenshot" alt="GraphQL codeblock in README" src="../../img/readme-example.jpg" width="500" />
 
@@ -29,15 +40,15 @@ Like the typical homepage for a Git repository, this page displays a Markdown-ba
 
 <Note>
 
-Only organization members with the [**Org Admin**, **Graph Admin**, **Contributor**, or **Documenter** role](../org/members/) can edit a variant's README. If a variant is [protected](#protected-variants-enterprise-only), **Contributors** cannot edit its README.
+Only organization members with the [**Org Admin**, **Graph Admin**, **Contributor**, or **Documenter** role](../org/members/) can edit a variant's README. If a variant is [protected](#protected-variants-enterprise-only), **Contributors** can't edit its README.
 
 </Note>
 
-Each variant has its own README. If you edit one variant's README, those edits are not applied to other variants. Among other uses, this enables you to provide different information to external consumers in a [public variant](#public-variants).
+Each variant has its own README. If you edit one variant's README, those edits aren't applied to other variants. Among other uses, this enables you to provide different information to external consumers in a [public variant](./management/#public-variants).
 
-#### Supported Markdown
+### Supported Markdown
 
-The README supports all [basic Markdown syntax](https://www.markdownguide.org/cheat-sheet/#basic-syntax) and most [extended syntax](https://www.markdownguide.org/cheat-sheet/#extended-syntax) (including tables, code blocks, and footnotes).
+The README supports all [basic Markdown syntax](https://www.markdownguide.org/cheat-sheet/#basic-syntax) and most [extended syntax](https://www.markdownguide.org/cheat-sheet/#extended-syntax), including tables, code blocks, and footnotes.
 
 You can define a GraphQL code block with the following syntax:
 
@@ -54,9 +65,9 @@ This renders the code block with buttons you can use to copy an operation or ope
 
 <img className="screenshot" alt="GraphQL codeblock in README" src="../../img/readme-codeblock.jpg" width="300" />
 
-#### README shortcodes
+### README shortcodes
 
-The README supports a set of shortcodes you can use to populate it with data that's specific to your variant, such as the graph's name and the variant's graph ref:
+The README supports a set of shortcodes. These shortcodes can populate the README with data specific to your variant, like the graph's name and the variant's graph ref:
 
 ```md
 # Overview of {{ graph.name }}
@@ -66,30 +77,21 @@ Graph ref: {{ graph.ref }}
 
 For a list of all supported shortcodes, click **Graph shortcodes** in the bottom-left corner of the README editor.
 
-### Exploring your schema
-
-GraphOS Studio provides helpful views for exploring your registered schema:
-
-- [The Explorer](#the-explorer), which helps you build new operations against your graph
-- [The Schema page](#the-schema-page), which enables you to filter your schema's type and field definitions (and also view your schema's raw SDL)
-
-#### The Explorer
-
-GraphOS Studio provides a powerful Explorer IDE that helps you visualize your graph and run queries against it. It's available from your graph's Explorer tab in Studio.
-
-<Tip>
-
-[Learn about the Explorer.](../explorer/)
-
-</Tip>
-
 <!-- vale Apollo.Headings = NO -->
 
-#### The Schema page
+## The Schema page
 
 <!-- vale Apollo.Headings = YES -->
 
-The Schema page lists the different kinds of definitions in your schema (objects, scalars, etc.):
+A graph variant's **Schema** page has three distinct views:
+
+  - The **Reference** tab lets you filter your schema's type and field definitions
+  - The **SDL** tab displays your schema's raw SDL
+  - The ** Visualization** tab provides a filterable, navigable, graphical representation of your schema
+
+### Schema reference
+
+The **Reference** tab on the **Schema** page lists the different kinds of definitions in your schema, for example, objects, scalars, etc.:
 
 <img
   className="screenshot"
@@ -109,14 +111,14 @@ Select a kind of definition to view a table of all corresponding types:
 Each type definition in the table includes:
 
 - The type's name
-  - You can click the name to view additional details for the type (such as fields for an object, or possible types for a union).
-- The type's description (if your schema includes one)
-- Which subgraphs define the type (if you have a federated supergraph)
+  - You can click the name to view additional details for the type, such as fields for an object, or possible types for a union.
+- The type's description, if your schema includes one
+- Which subgraphs define the type, if you have a federated supergraph
   - Users with the **Consumer** role can't view subgraph details.
 
-##### Filtering your schema
+#### Filtering your schema
 
-The top of the Schema page provides a **Filter Schema** box you can use to find types and fields that match a set of filters:
+The top of the **Schema** page provides a **Filter Schema** box you can use to find types and fields that match a set of filters:
 
 <img
   className="screenshot"
@@ -128,13 +130,14 @@ The top of the Schema page provides a **Filter Schema** box you can use to find 
 <Tip>
 
 - Click the arrow button to the left of the filter box to show/hide the filter selection dropdowns.
-- Click the button to the right of the filter box to copy a shareable URL of your currently active set of filters (you can also copy your browser's address bar directly).
+- Click the button to the right of the filter box to copy a shareable URL of your currently active set of filters.
+  - You can also copy your browser's address bar directly.
 
 </Tip>
 
-Any filters you set remain active as you move between definitions on the Schema page.
+Any filters you set remain active as you move between definitions on the **Schema** page.
 
-You can filter your schema definitions by type/field name (as shown above), along with any combination of the following:
+You can filter your schema definitions by type/field name, as shown above, along with any combination of the following:
 
 <table class="field-table">
   <thead>
@@ -177,7 +180,7 @@ Valid only for federated supergraphs.
 
 If your graph uses the `@tag` directive, include results that have a `@tag` with any of the specified names. If viewing a table of objects, also include objects with at least one field that has a specified `@tag`.
 
-If your graph doesn't use the `@tag` directive, this filter is not available.
+If your graph doesn't use the `@tag` directive, this filter isn't available.
 
 </td>
 <td>
@@ -247,109 +250,60 @@ Include results that take a GraphQL argument with any of the specified names. If
 
 </table>
 
-###### Filtering rules
+#### Filtering rules
 
-- If you list multiple possible values in a single filter, those values use "OR" logic.
+- If you list multiple possible values in a single filter, those values use **OR** logic.
   - For example, if you filter by `subgraph:products,reviews` the result includes definitions from each subgraph.
-- If you apply multiple types of filters, those filters use "AND" logic.
+- If you apply multiple types of filters, those filters use **AND** logic.
   - For example, if you filter by `subgraph:products` and `returnType:Int`, the result includes only definitions that fulfill both criteria.
-- Currently, it isn't possible to use "AND" logic for multiple filters of the same type.
-  - For example, it isn't possible to filter by `subgraph:products` "AND" `subgraph:reviews` to include only definitions that are present in both subgraphs.
+- Currently, it isn't possible to use **AND** logic for multiple filters of the same type.
+  - For example, it isn't possible to filter by `subgraph:products` **AND** `subgraph:reviews` to include only definitions that are present in both subgraphs.
 
-### Tracking schema changes
+### Schema definition language
 
-The Changelog page in Studio displays a timeline of changes made to your graph's schema:
+The **SDL** tab displays the raw schema definition language (SDL) for each schema associated with your graph. For a monograph, this is simply the graph's API Schema. Supergraphs also include a supergraph schema and subgraph schemas. See [Viewing subgraph SDL](./federated-graphs#viewing-subgraph-sdl) for more information.
+
+Regardless of the SDL type you're viewing, you can **Copy** the SDL or download it in **Raw** or **JSON** format from this tab.
+
+### Schema visualization
+
+The **Visualization** tab provides a graphical representation of your schema's structure, including types, fields, and relationships.
+It can help clarify your understanding of your schema's design, so you can more easily identify potential issues and improve your data model.
+
+<img
+  src="../../img/schema-visualization.png"
+  className="screenshot"
+  alt="Schema visualization in Studio"
+/>
+
+Use the buttons on the bottom of the page to:
+- Zoom in and out of the visualization
+- Copy a link to the visualization to share with organization members
+- Download an SVG or PNG of the visualization
+- Open and close the visualization **Legend**
+
+On the top of the page, you can:
+- Click the double arrow to collapse or expand a searchable list of **Types**.
+- Click **Show Filters** to filter your visualization by root type, subgraph, or tag.
+- Click the **Highlight** dropdown to select particular types, tags, or directives to highlight.
+  - Highlighting **Unused** types, **Errors**, **Usage**, or **Latency**, the visualization displays a heatmap whose **Time range** you can adjust in the bottom right of the screen.
+
+    <img
+      src="../../img/schema-visualization-heatmap.png"
+      className="screenshot"
+      alt="Visualization heatmap showing unused types and fields in a schema visualization"
+    />
+
+- Click **More** to **Collapse all fields** or **Hide** particular fields, types, and nodes.
+
+## The Explorer
+
+GraphOS Studio provides a powerful Explorer IDE that helps you visualize your graph and run queries against it. It's available from your graph's **Explorer** page in Studio. Refer to the [Explorer docs](../explorer/) to learn more.
+
+## Tracking schema changes
+
+The **Changelog** page in Studio displays a timeline of changes made to your graph's schema:
 
 <img src="../../img/changelog-page.jpg" className="screenshot" alt="Schema Changelog tab" width="450" />
 
-Only schema changes that you publish to Studio are included in this timeline, which is one of the most important reasons to [include schema publishing in your continuous delivery pipeline](../delivery/publishing-schemas/#publish-with-continuous-delivery).
-
-## Managing access permissions
-
-### Public variants
-
-You can enable public access for individual variants of your graph. If you do, anyone with that variant's public link can view the following pages for that variant in Studio:
-
-- Home
-  - This shows the variant's README.
-- Schema
-- Explorer
-  - You can also [embed the Explorer](../explorer/embed-explorer/) on your own webpage.
-
-This enables consumers of your graph to learn about your graph's schema and any special usage information (such as authentication details) that you've documented in [the public variant's README](#the-readme-page). They can also run properly authenticated operations against your graph with the Explorer.
-
-People outside your organization can't view any other pages for a public variant (Fields, Operations, etc.), and they can never view any pages for private variants. New variants always start as private.
-
-#### Making a variant public
-
-<Note>
-
-Only organization members with the [**Org Admin** or **Graph Admin** role](../org/members/) can toggle a variant's public visibility.
-
-</Note>
-
-1. Go to your variant's Settings page and open the **This Variant** tab.
-2. Find the Public card and click **Change**:
-
-   <img
-     class="screenshot"
-     src="../../img/toggle-public-protected-variant.png"
-     alt="Toggle public variant in Studio"
-     width="400"
-   />
-
-3. Toggle your selection and click **Save**.
-
-You can toggle the switch back to **Off** to make the variant private again.
-
-After you make a variant public, you can click the variant's **PUBLIC** label at the top of GraphOS Studio to get its public link:
-
-<img className="screenshot" src="../../img/public-variant-label.jpg" alt="Public variant label in Studio" width="400" />
-
-### Protected variants (Enterprise only)
-
-If you have a [GraphOS Enterprise plan](../enterprise/), you can designate particular variants of a graph as _protected variants_. A protected variant limits the capabilities of users with the [**Contributor** role](../org/members/#organization-wide-member-roles) to make certain changes to the variant:
-
-- **Contributors** cannot push schema updates to a protected variant.
-- **Contributors** cannot manage Explorer-related settings for a protected variant, such as setting the variant's endpoint URL.
-- Graph API Keys with the **Contributor** role cannot report usage metrics for a protected variant.
-
-**Graph Admins** and **Org Admins** can configure whether a variant is protected from the **This Variant** tab of the variant's Settings page.
-
-### Internal graph visibility (Enterprise only)
-
-<Tip>
-
-For external graph visibility, see [Public variants](#public-variants).
-
-</Tip>
-
-By default, graphs are visible to all members of your organization. If you have a [GraphOS Enterprise plan](../enterprise/), you can set a graph to instead be visible only to members you invite.
-
-You can configure visibility and grant your organization's members explicit access to your graph from the Permissions tab of your graph's Settings page.
-
-<Note>
-
-**Org Admins** can always see all graphs in your organization.
-
-</Note>
-
-## Dangerous actions
-
-### Transferring graph ownership
-
-You can transfer a graph to a different GraphOS organization you belong to
-by visiting the graph's Settings page in Studio and changing the graph owner.
-
-### Deleting a graph
-
-<Caution>
-
-Deleting a graph cannot be undone!
-
-If you delete a cloud supergraph, all its GraphOS-hosted routers are deprovisioned.
-
-</Caution>
-
-You can delete a graph from Studio by visiting its Settings page and clicking
-**Delete Graph**.
+Only schema changes that you publish to Studio are in this timeline, which is one of the most important reasons to [include schema publishing in your continuous delivery pipeline](../delivery/publishing-schemas/#publish-with-continuous-delivery).
