--- a/src/content/graphos/org/members.mdx
+++ b/src/content/graphos/org/members.mdx
@@ -12,7 +12,7 @@ Each organization member has one of the following roles:
 | ------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------: |
 | **Org Admin**       | Has management access to the entire organization, including its members, graphs, and configuration.                                                                                                                                                                                                                                                   |                              All                               |
 | **Graph Admin**     | Has management access to the organization's graphs, but not to members or organization-level configuration. Intended for developers who are considered admins to the graph.                                                                                                                                                                           |                        Enterprise only                         |
-| **Contributor**     | Can push new schemas to graphs, but cannot configure graph settings or integrations. Intended for backend developers who are authorized to make changes to graphs. Cannot push schema changes to [protected variants](../graphs/studio-features/#protected-variants-enterprise-only).                                                                 |                        Enterprise only                         |
+| **Contributor**     | Can push new schemas to graphs, but cannot configure graph settings or integrations. Intended for backend developers who are authorized to make changes to graphs. Cannot push schema changes to [protected variants](../graphs/management/#protected-variants-enterprise-only).                                                                 |                        Enterprise only                         |
 | **Documenter**      | Has all permissions of the Observer role, plus the ability to edit graph READMEs, descriptions, and similar non-operational metadata.                                                                                                                                                                                                                 |                        Enterprise only                         |
 | **Observer**        | Has view-only access to the organization's graph data, such as schemas and metrics. Can also execute queries in the Explorer. Intended for backend developers who are not authorized to make changes to graphs.                                                                                                                                       |                        Enterprise only                         |
 | **Consumer**        | Has view-only access to the organization's API schemas, but not supergraph or subgraph schemas, or metrics. Can also execute queries in the Explorer. Intended for application developers building clients against a graph.<p></p>This role is available to all plan types. For legacy Team plans, **Consumer** members do not count as billed users. |                              All                               |
@@ -34,7 +34,7 @@ Members with the **Graph Admin** or **Org Admin** role can assign graph-specific
 
 ### Hidden graphs
 
-If a graph is made [hidden](../graphs/studio-features/#internal-graph-visibility-enterprise-only), then only users with explicit overrides (as well as **Org Admin**s) can see the graph.
+If a graph is made [hidden](../graphs/management/#internal-graph-visibility-enterprise-only), then only users with explicit overrides (as well as **Org Admin**s) can see the graph.
 
 ### Graph admin override
 
@@ -60,20 +60,20 @@ When **Contributor**s in an organization create a new graph, they are automatica
 
 ### Graph management permissions
 
-| Action                                           | Org Admin | Graph Admin |                                         Contributor                                          | Observer / Documenter | Consumer |
-| :----------------------------------------------- | :-------: | :---------: | :------------------------------------------------------------------------------------------: | :-------------------: | :------: |
-| View and manage graph API keys                   |     ✓     |      ✓      |                                                                                              |                       |          |
-| Manage graph integrations (Slack, Datadog, etc.) |     ✓     |      ✓      |                                                                                              |                       |          |
-| Delete and rename graphs                         |     ✓     |      ✓      |                                                                                              |                       |          |
-| Create graphs                                    |     ✓     |      ✓      |                                              ✓                                               |                       |          |
-| Create new variants                              |     ✓     |      ✓      | Non-[protected](../graphs/studio-features/#protected-variants-enterprise-only) variants only |                       |          |
-| Push schemas to a graph                          |     ✓     |      ✓      | Non-[protected](../graphs/studio-features/#protected-variants-enterprise-only) variants only |                       |          |
-| Manage Explorer settings (URL, etc)              |     ✓     |      ✓      | Non-[protected](../graphs/studio-features/#protected-variants-enterprise-only) variants only |                       |          |
-| See the schemas of subgraphs in federated graphs |     ✓     |      ✓      |                                              ✓                                               |           ✓           |          |
-| View graph usage metrics and traces <sup>1</sup> |     ✓     |      ✓      |                                              ✓                                               |           ✓           |          |
-| Edit variant READMEs                             |     ✓     |      ✓      |                                              ✓                                               |    Documenter only    |          |
-| Query graphs with the Explorer                   |     ✓     |      ✓      |                                              ✓                                               |           ✓           |    ✓     |
-| View graph schemas and changelogs                |     ✓     |      ✓      |                                              ✓                                               |           ✓           |    ✓     |
+| Action                                           | Org Admin | Graph Admin |                                       Contributor                                       | Observer / Documenter | Consumer |
+| :----------------------------------------------- | :-------: | :---------: | :-------------------------------------------------------------------------------------: | :-------------------: | :------: |
+| View and manage graph API keys                   |     ✓     |      ✓      |                                                                                         |                       |          |
+| Manage graph integrations (Slack, Datadog, etc.) |     ✓     |      ✓      |                                                                                         |                       |          |
+| Delete and rename graphs                         |     ✓     |      ✓      |                                                                                         |                       |          |
+| Create graphs                                    |     ✓     |      ✓      |                                            ✓                                            |                       |          |
+| Create new variants                              |     ✓     |      ✓      | Non-[protected](../graphs/management/#protected-variants-enterprise-only) variants only |                       |          |
+| Push schemas to a graph                          |     ✓     |      ✓      | Non-[protected](../graphs/management/#protected-variants-enterprise-only) variants only |                       |          |
+| Manage Explorer settings (URL, etc)              |     ✓     |      ✓      | Non-[protected](../graphs/management/#protected-variants-enterprise-only) variants only |                       |          |
+| See the schemas of subgraphs in federated graphs |     ✓     |      ✓      |                                            ✓                                            |           ✓           |          |
+| View graph usage metrics and traces <sup>1</sup> |     ✓     |      ✓      |                                            ✓                                            |           ✓           |          |
+| Edit variant READMEs                             |     ✓     |      ✓      |                                            ✓                                            |    Documenter only    |          |
+| Query graphs with the Explorer                   |     ✓     |      ✓      |                                            ✓                                            |           ✓           |    ✓     |
+| View graph schemas and changelogs                |     ✓     |      ✓      |                                            ✓                                            |           ✓           |    ✓     |
 
 <blockquote>
 
