Remove unnecessary client awareness images

--- a/src/content/graphos/metrics/client-awareness.mdx
+++ b/src/content/graphos/metrics/client-awareness.mdx
@@ -17,7 +17,7 @@ To enable client awareness, your clients must identify themselves in their reque
 You view client-segmented metrics from a variant's **Clients** page in Studio:
 
 <img
-  src="../img/client-awareness/overview.jpg"
+  src="../img/client-awareness.jpg"
   className="screenshot"
   alt="Client awareness overview"
   width="400"
@@ -64,13 +64,7 @@ By filtering your graph's metrics by client (and client version with Enterprise)
 
 ### Deprecate, change, and remove fields safely
 
-Modifying or removing an existing field in your schema is often a breaking change for the clients that use that field. Client awareness gives you a breakdown of which clients use which fields in your schema, enabling you to determine the impact of such a change:
-
-<img
-  src="../img/client-awareness/field-usage.png"
-  className="screenshot"
-  alt="Table of client field usage"
-/>
+Modifying or removing an existing field in your schema is often a breaking change for the clients that use that field. Client awareness gives you a breakdown of which clients use which fields in your schema, enabling you to determine the impact of such a change.
 
 ### Backend cutover
 
