--- a/src/content/graphos/metrics/notifications/notification-setup.mdx
+++ b/src/content/graphos/metrics/notifications/notification-setup.mdx
@@ -43,13 +43,7 @@ For performance alerts, see [Performance alerts setup](./performance-alerts/#set
      width="500"
      alt="Add new alert button"
    />
-4. Select a notification type and click **Next**:
-   <img
-     src="../../img/add-notification.jpg"
-     class="screenshot"
-     width="500"
-     alt="Notification creation modal"
-   />
+4. Select a notification type, either **Daily Report**, **Schema Change**, or **Build Status** and click **Next**:
 5. In the dropdown, select which [variant](../../graphs/#variants) of your graph you want to receive notifications for.
 6. Select an existing configured channel to send notifications to, or select which type of new channel you want to configure:
    <img
