Remove unnecessary audit log img

--- a/src/content/graphos/org/audit-log.mdx
+++ b/src/content/graphos/org/audit-log.mdx
@@ -29,14 +29,7 @@ Only [Organization Admins](./members/#organization-wide-member-roles) can reques
 
 </Note>
 
-When creating an audit log export, you specify a **time range**, along with optional filters to limit actions to a particular **user** or **graph**. The maximum time range that you can request audits for is 180 days, as defined by our retention policy.
-
-<img
-  src="../img/audit-log-create.jpg"
-  className="screenshot"
-  alt="GraphOS Studio Audit Log"
-  width="400"
-/>
+When creating an audit log export, you specify a **time range**, along with optional filters to limit actions to a particular **user** or **graph**. The maximum time range that you can request audits for is 180 days, as defined by Apollo's [retention policy](https://www.apollographql.com/pricing#data-retention).
 
 <Note>
 
