Remove changelog image

--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -302,8 +302,5 @@ GraphOS Studio provides a powerful Explorer IDE that helps you visualize your gr
 
 ## Tracking schema changes
 
-The **Changelog** page in Studio displays a timeline of changes made to your graph's schema:
-
-<img src="../../img/changelog-page.jpg" className="screenshot" alt="Schema Changelog tab" width="450" />
-
+The **Changelog** page in Studio displays a timeline of changes made to your graph's schema.
 Only schema changes that you publish to Studio are in this timeline, which is one of the most important reasons to [include schema publishing in your continuous delivery pipeline](../delivery/publishing-schemas/#publish-with-continuous-delivery).
