Remove unnecessary contracts images

--- a/src/content/graphos/basics/graphs/federated-graphs.mdx
+++ b/src/content/graphos/basics/graphs/federated-graphs.mdx
@@ -449,17 +449,4 @@ If a supergraph's most recent set of subgraph schemas failed to compose, a **BUI
   width="500"
 />
 
-You can click this label to view the errors that must be resolved before composition can succeed:
-
-<img
-  class="screenshot"
-  src="../../img/composition-error.jpg"
-  alt="Studio screenshot showing the composition error modal that is opened by clicking the build failed label"
-  width="500"
-/>
-
-<Tip>
-
-[Learn more about composition errors.](/federation/errors/)
-
-</Tip>
+You can click this label to view the errors that must be resolved before composition can succeed. Refer to the [composition error reference](/federation/errors/) for more information.
