Remove unnecessary notification images

--- a/src/content/graphos/basics/graphs/federated-graphs.mdx
+++ b/src/content/graphos/basics/graphs/federated-graphs.mdx
@@ -194,7 +194,7 @@ You can delete an existing subgraph from a variant of your cloud supergraph. If 
 
 1. Go to the Subgraphs page for the subgraph's corresponding variant.
 
-2. Open the "◦◦◦" menu for the subgraph you want to delete:
+2. Click the **•••** button on the right of the subgraph you want to delete:
 
    <img
      class="screenshot"
@@ -205,16 +205,7 @@ You can delete an existing subgraph from a variant of your cloud supergraph. If 
 
 3. Click **Delete subgraph**. Studio attempts to compose a new supergraph schema that doesn't include the subgraph you want to delete.
 
-4. A confirmation dialog appears that displays any composition errors that occurred:
-
-   <img
-     class="screenshot"
-     alt="Dialog for confirming deletion of a subgraph"
-     src="../../img/delete-subgraph-dialog.jpg"
-     width="500"
-   />
-
-   If you're sure you want to delete the subgraph, enter its name and click **Delete subgraph**.
+4. A confirmation dialog appears that displays any composition errors that occurred. If you're sure you want to delete the subgraph, enter its name and click **Delete subgraph**.
 
 ## Viewing a field's originating subgraph
 
