--- a/src/content/graphos/metrics/notifications/notification-setup.mdx
+++ b/src/content/graphos/metrics/notifications/notification-setup.mdx
@@ -45,13 +45,7 @@ For performance alerts, see [Performance alerts setup](./performance-alerts/#set
    />
 4. Select a notification type, either **Daily Report**, **Schema Change**, or **Build Status** and click **Next**:
 5. In the dropdown, select which [variant](../../graphs/#variants) of your graph you want to receive notifications for.
-6. Select an existing configured channel to send notifications to, or select which type of new channel you want to configure:
-   <img
-     src="../../img/create-new-channel.jpg"
-     class="screenshot"
-     width="400"
-     alt="Notification creation modal"
-   />
+6. Select an existing configured channel to send notifications to, or select which [type of new channel](#supported-notifications-and-channels) you want to configure.
 7. Click **Next**.
 8. If you're configuring a new channel, complete the steps in [Configuring a new channel](#configuring-a-new-channel).
 9. If you're creating a daily report, select a time zone. The report is sent daily at 9 AM in the selected time zone.
