Remove unnecessary embed dialog images

--- a/src/content/graphos/explorer/embed-explorer.mdx
+++ b/src/content/graphos/explorer/embed-explorer.mdx
@@ -42,11 +42,7 @@ For more information, see the [landing page plugin API reference](/apollo-server
 
 2. Go to the variant's Explorer page.
 
-3. Under the Explorer's Settings tab, find **Embed Explorer** and click **Copy code snippet**.
-
-   The following dialog appears:
-
-   <img class="screenshot" src="../img/embed-explorer-modal.jpg" alt="Explorer embed dialog" width="600" />
+3. Under the Explorer's Settings tab, find **Embed Explorer** and click **Copy code snippet**. A dialog with options and code snippets appears.
 
 4. Use the options on the left side of the dialog to customize the embedded Explorer's appearance and behavior to your liking.
 
@@ -90,9 +86,7 @@ Open the share dropdown in the Explorer and select **Share as embed**:
 
 If you're embedding a [public variant](../graphs/management/#public-variants), anyone with access to the embedded Explorer can view your schema and make queries against your variant.
 
-If you're embedding a private variant, the embedded Explorer first asks users to authenticate by signing in to Studio. Authenticated users are then asked to authorize their Studio account to be used on the embedding webpage:
-
-<img class="screenshot" src="../img/embed-authorize.jpg" alt="Explorer authorization screen" width="400" />
+If you're embedding a private variant, the embedded Explorer first asks users to authenticate by signing in to GraphOS Studio. Authenticated users are then asked to authorize their Studio account to be used on the embedding webpage.
 
 After authorizing, users can access the embedded Explorer, which includes schema navigation and visible operation collections.
 
