--- a/src/content/graphos/explorer/sandbox.mdx
+++ b/src/content/graphos/explorer/sandbox.mdx
@@ -171,11 +171,7 @@ You can embed Sandbox on your own website. This can be useful for interacting wi
      Open Sandbox.
    </a>
 
-2. Under the Explorer's Settings tab, find **Embed Sandbox** and click **Copy code snippet**.
-
-   The following dialog appears:
-
-   <img class="screenshot" src="../img/embed-sandbox-modal.jpg" alt="Sandbox embed dialog" width="600" />
+2. Under the Explorer's Settings tab, find **Embed Sandbox** and click **Copy code snippet**. A dialog with options and code snippets appears.
 
 3. In the dialog, use the tabs to select the code snippet for your use case:
 
