Remove unnecessary linter screenshots

--- a/src/content/graphos/delivery/schema-linter.mdx
+++ b/src/content/graphos/delivery/schema-linter.mdx
@@ -31,14 +31,7 @@ To navigate to your linter configuration:
 
 1. In [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content), go to your graph's **Checks** page.
 2. Click **Configuration** in the upper right to open the checks configuration page.
-3. From the checks configuration page, open the **Linter** section:
-
-    <img
-      src="../img/linter-configuration.jpg"
-      class="screenshot"
-      alt="Linter configuration page in GraphOS Studio"
-      width="700"
-    />
+3. From the checks configuration page, open the **Linter** section.
 
 This page organizes linter options into the following categories:
 
