Remove unnecessary explorer scripting screenshots

--- a/src/content/graphos/explorer/scripting.mdx
+++ b/src/content/graphos/explorer/scripting.mdx
@@ -124,23 +124,7 @@ Only organization members [with edit access](../org/members/#role-permissions) t
      width="400"
    />
 
-2. From the Explorer's bottom panel, select the **Pre-Operation Script** or **Post-Operation Script** tab and click **+ Add Script**:
-
-   <img
-     class="screenshot"
-     src="../img/new-operation-scripts-tab.png"
-     alt="Adding a new operation script"
-     width="500"
-   />
-
-   The following modal appears:
-
-   <img
-     class="screenshot"
-     src="../img/op-preflight-script-modal.png"
-     alt="Editing operation scripts in the Explorer"
-     width="600"
-   />
+2. From the Explorer's bottom panel, select the **Pre-Operation Script** or **Post-Operation Script** tab and click **+ Add Script**. A script creation dialog appears.
 
 3. Create, test, and save your script.
 
@@ -152,13 +136,6 @@ After you save an operation script, make sure to [turn it on](#turn-on-operation
 ### Mocking responses for post-operation scripts
 
 The operation script modal has a **Mocked Operation Response** area so you can test post-operation scripts before saving them. Scripts can access any JSON GraphQL response you add in the **Mocked Operation Response** via the [`explorer.response.body`](#explorerresponsebody) variable.
-
-<img
-  class="screenshot"
-  src="../img/op-postflight-script-modal.png"
-  alt="Editing operation scripts in the Explorer"
-  width="600"
-/>
 
 ### Turn on operation scripts
 
