--- a/src/content/graphos/org/index.mdx
+++ b/src/content/graphos/org/index.mdx
@@ -27,14 +27,7 @@ A single organization can include any number of [graphs](../graphs/), so a singl
 
 ## Viewing your organizations
 
-Click the organization dropdown at the top of the page in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) to view the list of all organizations you belong to:
-
-<img
-  src="../img/organization-list.jpg"
-  className="screenshot"
-  alt="Studio organization list"
-  width="300"
-/>
+Click the organization dropdown at the top of the page in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) to view the list of all organizations you belong to.
 
 - Click on an organization to view its associated graphs and metrics.
 - Each organization has a **Graphs** list, a **Members** management page, and a **Settings** page.
