Remove unnecessary PQL screenshots

--- a/src/content/graphos/explorer/scripting.mdx
+++ b/src/content/graphos/explorer/scripting.mdx
@@ -73,16 +73,9 @@ To create a preflight script:
      width="500"
    />
 
-3. Click **+ Add script**. The following dialog appears:
+3. Click **+ Add script**. A script editor dialog appears.
 
-   <img
-     class="screenshot"
-     src="../img/preflight-script-edit.jpg"
-     alt="Editing preflight scripts in the Explorer"
-     width="600"
-   />
-
-4. Click **Show snippets** to display a list of common helpful actions you can perform from your preflight script. Examples include sending HTTP requests and interacting with Explorer environment variables.
+4. Click **Show snippets** on the bottom left of the editor to display a list of common helpful actions you can perform from your preflight script. Examples include sending HTTP requests and interacting with Explorer environment variables.
 
 5. Develop your script in the **Script editor** panel. As you develop, you can click **Test script** to test its execution. Console messages are printed in the **Console output** panel.
 
