Remove unnecessary sandbox screenshos

--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -61,7 +61,7 @@ You can define a GraphQL code block with the following syntax:
     }
     ```
 
-This renders the code block with buttons you can use to copy an operation or open it in the Explorer:
+This renders the code block with buttons to copy an operation or open it in the Explorer:
 
 <img className="screenshot" alt="GraphQL codeblock in README" src="../../img/readme-codeblock.jpg" width="300" />
 
