--- a/src/content/graphos/explorer/sandbox.mdx
+++ b/src/content/graphos/explorer/sandbox.mdx
@@ -50,7 +50,7 @@ https://flyby-locations-sub.herokuapp.com/
 
 If you log in to GraphOS Studio from Sandbox, you can diff your Sandbox schema against any subgraph or monolith graph you have access to in the GraphOS schema registry.
 
-From [Sandbox](https://studio.apollographql.com/sandbox/), open the **Schema Diff** page from the left navigation panel. Then use the dropdown menus to select any accessible organization, graph, and variant to compare against:
+From [Sandbox](https://studio.apollographql.com/sandbox/), open the **Schema Diff** page from the left navigation panel. Then use the dropdown menus to select any accessible organization, graph, and variant to compare against.
 
 <img class="screenshot" src="../img/sandbox-diff.jpg" alt="Schema diff in Sandbox" />
 
@@ -72,15 +72,9 @@ Organization members with the [**Consumer** role](../org/members/#organization-w
 
 </Note>
 
-From [Sandbox](https://studio.apollographql.com/sandbox/), open the **Checks** page from the left navigation panel:
-
-<img class="screenshot" src="../img/sandbox-checks-select.jpg" alt="Sandbox select variant for checks" width="400" />
-
-Select any accessible organization, graph, and variant to check against and click **Run a check**. When the check completes, Sandbox displays a result summary:
-
-<img class="screenshot" src="../img/sandbox-checks-result.jpg" alt="Sandbox checks result" width="400" />
-
-To view the result's full details in Studio, click **Go to details**.
+From [Sandbox](https://studio.apollographql.com/sandbox/), open the **Checks** page from the left navigation panel.
+A dialog appears where you can select the organization, graph, and variant to run a check against and click **Run a check**.
+When the check completes, Sandbox displays a result summary. To view the result's full details in Studio, click **Go to details**.
 
 ### Subgraph checks
 
