--- a/src/content/graphos/explorer/scripting.mdx
+++ b/src/content/graphos/explorer/scripting.mdx
@@ -64,14 +64,7 @@ To create a preflight script:
 
 1. [Open GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content) and then open the Explorer for the graph and variant you want to create a script for.
 
-2. Open the Explorer's Settings tab and scroll down to the **Preflight Script** section:
-
-   <img
-     class="screenshot"
-     src="../img/preflight-script.png"
-     alt="Preflight script settings in the Explorer"
-     width="500"
-   />
+2. Open the Explorer's Settings tab and scroll down to the **Preflight Script**.
 
 3. Click **+ Add script**. A script editor dialog appears.
 
